--- a/imLib/build.gradle
+++ b/imLib/build.gradle
@@ -1,18 +1,16 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.freddy.chat"
         minSdk 21
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -28,13 +26,11 @@ android {
 }
 
 dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-//    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-
-    implementation 'com.alibaba:fastjson:1.2.49'
-    implementation 'com.android.support:multidex:1.0.1'
-    implementation project(':imLib')
-
+    compileOnly 'com.alibaba:fastjson:1.2.49'
+    api 'com.google.protobuf:protobuf-java:3.5.0'
+    compileOnly files('libs/netty-tcp-4.1.33-1.0.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
